[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/worlds/scenes/Menu.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/worlds/scripts/World.gd" type="Script" id=2]
[ext_resource path="res://src/worlds/scenes/MenuTransition.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/worlds/scenes/Manager.gd" type="Script" id=4]

[node name="World" type="Node2D"]
script = ExtResource( 2 )

[node name="Manager" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="CurrentScene" type="Node2D" parent="Manager"]

[node name="Menu" parent="Manager/CurrentScene" instance=ExtResource( 1 )]

[node name="MenuTransition" parent="Manager" instance=ExtResource( 3 )]

[connection signal="transitioned" from="Manager/MenuTransition" to="Manager" method="_on_MenuTransition_transitioned"]
